# liniya

./: Cargo.toml  LICENSE  README.md
examples/: adaptive_segment.rs  grid.rs
src/: camera.rs  common.rs  frustum.rs  lib.rs  scene.rs  shape.rs  util.rs
src/scene/: mod.rs  scene.rs  visitors.rs
src/shape/: box_outline.rs  mod.rs  sphere.rs
