[package]
name = "liniya"
version = "0.1.0"
authors = ["mason"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncollide3d = "*"
nalgebra = "0.26"
anyhow = "*"
thiserror = "*"
art-util = { path = "/home/mason/workspace/art-util/" }
approx = "*"
svg = "*"
