[package]
name = "liniya"
version = "0.1.0"
authors = ["mason"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncollide3d = "0.28"
nalgebra = "0.25"
anyhow = "*"
thiserror = "*"
art-util = { path = "/home/mason/workspace/art-util/" }
approx = "*"
svg = "*"
